fixed some spacing issues for different view sizes

--- a/src/component-css/form.css
+++ b/src/component-css/form.css
@@ -56,7 +56,7 @@ div.register{
 
   @media only screen and (min-width: 768px) {
     form.recipe-form { 
-        margin-right: 50px;
+        margin-right: 30px;
         margin-left: 50px;
         padding-right: 20px;
         padding-left: 20px;
@@ -100,10 +100,11 @@ div.register{
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 1440px) {
     form.recipe-form { 
-        margin-right: 200px;
+        margin-right: 100px;
         margin-left: 20px;
         padding-right: 50px;
         padding-left: 50px;
+        width: 30%;
        }
        form.login-form { 
         margin: 0 auto;
