--- a/src/component-css/recipe-list.css
+++ b/src/component-css/recipe-list.css
@@ -16,14 +16,20 @@ ul{
 
 @media only screen and (min-width: 768px) {
     div.recipe-list{
-        margin-left: 10px;
+        margin-left: 30px;
         width: 40%;
     
     }
 } 
 
- @media only screen and (min-width: 992px) {
+ @media only screen and (min-width: 1023px) {
     div.recipe-list{
-        margin-left: 30px;
+        margin-left: 75px;
+    } 
+}
+
+@media only screen and (min-width: 1440px) {
+    div.recipe-list{
+        margin-left: 100px;
     } 
 }
